fix(navbar): Fix an issue with incorrect z-index

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* src > index.css */
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Aldine 721bt', serif;
   line-height: 1.5;
   font-weight: 400;
 
