--- a/src/styles/layout/layout.scss
+++ b/src/styles/layout/layout.scss
@@ -40,6 +40,7 @@
                     padding: 1rem;
                     flex: 1;
                     overflow-y: auto;
+                    z-index: 2;
                 }
             }
         }
